--- a/q/156170.html
+++ b/q/156170.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>083</td><td>R</td><td>240705T191226Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/273947#273947">Dominic </a></td></tr>
+<tr d-ix="0"><td>082</td><td>R</td><td>240705T191226Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/273947#273947">Dominic </a></td></tr>
 <tr d-ix="1"><td>008</td><td>Japt</td><td>240705T162543Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/273946#273946">Shaggy</a></td></tr>
 <tr d-ix="2"><td>042</td><td>Arturo</td><td>240705T161831Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/273945#273945">chunes</a></td></tr>
 <tr d-ix="3"><td>086</td><td>R</td><td>240705T100139Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/273937#273937">int 21h </a></td></tr>
@@ -81,11 +81,11 @@
 <tr d-ix="52"><td>009</td><td>Retina</td><td>180219T180144Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/156173#156173">Martin E</a></td></tr>
 <tr d-ix="53"><td>006</td><td>Jelly</td><td>180219T180036Z</td><td><a href="https://codegolf.stackexchange.com/questions/156170/split-string-on-first-occurrence-of-each-character/156171#156171">Erik the</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, 83 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>83</s> 82 bytes</h1>
 
-<pre class="lang-r prettyprint-override"><code>function(s)if(s!=&quot;&quot;)substring(s,i&lt;-which(!duplicated(utf8ToInt(s))),c(i[-1],1e6)-1)
+<pre class="lang-r prettyprint-override"><code>function(s)if(s&gt;&quot;&quot;)substring(s,i&lt;-which(!duplicated(utf8ToInt(s))),c(i[-1],1e6)-1)
 </code></pre>
-<p><a href="https://tio.run/##JYsxC8IwEEZ3f0V6g9xBMmQRBzuIg7h1cBOHmjT2wKahl@DPj5XCx@Px4FtqaGso0WWeIwpxQGlaAJLykrxwfKNoPpnvyG7Expf0YdfnwWPJ4XifbzGvLyLtkB/GPrUdDmQs1YAwsch/KTHQbg1n30@bbexUp/bqoq5A9Qc" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##JYsxC8IwEEZ3f0XMIHeQDFnEQQVxELcObuJQk549aNPQS/Dnx0rh4/F48M2VTpVK9JmnCIJMIGetUcpb8szxA2L4aL89@x62oaSBfZu7ACXT4THdY15OiMYDP617Gdft0TqsBHpkkf9SYo2bJVxCO662slGN2qmrummsPw" rel="nofollow noreferrer" title="R – Try It Online">Try it online!</a></p>
 <p>Different approach to <a href="https://codegolf.stackexchange.com/a/273937/95126">int 21h Glory to Ukraine's answer</a>.</p>
 <p>Note, though, that <a href="https://codegolf.stackexchange.com/users/101276/int-21h-glory-to-ukraine">int 21h Glory to Ukraine</a> could still beat this by reverting to the (allowed) output format of a single newline-separated string.</p>
 </div>
