--- a/q/111707.html
+++ b/q/111707.html
@@ -69,7 +69,16 @@
 <li>Column number (1-indexed)</li>
 <li>Value</li>
 </ol>
-<p>Each column is shown in reverse order but I think this can be justified because I clarified row and column indices.</p>
+<p>Each column is shown in reverse order but I think this can be justified because I clarified row and column indices. Example:</p>
+<pre><code>1 4 sample
+1 3 some
+1 2 is
+1 1 Here
+2 4 commas
+2 3 by
+2 2 delimited
+2 1 data
+</code></pre>
 <h2>Explained</h2>
 <pre><code>             # For each line,
 # -F?        # split line by a delimiter to store to $1, $2, ..., $NF as strings
