--- a/q/235964.html
+++ b/q/235964.html
@@ -140,14 +140,10 @@ function _____(__, _, ___, ____) {
 </code></pre>
 <hr />
 <h2>UPDATE</h2>
-<p>: adding a functional programming style recursive function in <code>awk</code> (but this version using the exponentiation operator) :</p>
-<pre><code>func __(_) { return _+_&lt;_*_ ? _*(_*--_)^_--*__(_) : (_+_)^(!!_&lt;_) }
+<p>adding a functional programming style recursive function in <code>awk</code> (but this version using the exponentiation operator) :</p>
+<pre><code>func __(_) { return _^_--*(1&lt;_?__(_):1) }
 </code></pre>
-<blockquote>
-<p>or the hideous version using hard-coded numbers :</p>
-</blockquote>
-<pre><code>func __(_) { return 2&lt;_ ? _^_*__(--_) : 4^(1&lt;_) }
-</code></pre>
+<p><code>awk</code>'s syntax looks really modern for a 50-year old language</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 40 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>|n|(1u32..=n).map(|n|n.pow(n)).product()
