--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240706T061223Z
+"   /golfscore                                      20240706T071418Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/169923.html">Bridge Deal Scoring                             : 0169923</a>
 <a href="q/156170.html">Split string on first occurrence of each charact: 0156170</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/55422.html">Hello World!                                    : 0055422</a>
