--- a/q/273783.html
+++ b/q/273783.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>118</td><td>Python 3.8 prerelease</td><td>240705T124844Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273941#273941">Jakque</a></td></tr>
-<tr d-ix="1"><td>076</td><td>GolfScript</td><td>240702T072612Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273863#273863">Twilight</a></td></tr>
+<tr d-ix="0"><td>075</td><td>GolfScript</td><td>240702T072612Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273863#273863">Twilight</a></td></tr>
+<tr d-ix="1"><td>118</td><td>Python 3.8 prerelease</td><td>240705T124844Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273941#273941">Jakque</a></td></tr>
 <tr d-ix="2"><td>088</td><td>Zsh</td><td>240628T022041Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273829#273829">GammaFun</a></td></tr>
 <tr d-ix="3"><td>102</td><td>JavaScript ES6</td><td>240625T130346Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273800#273800">Arnauld</a></td></tr>
 <tr d-ix="4"><td>097</td><td>Perl 5 F</td><td>240625T211527Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273808#273808">Xcali</a></td></tr>
@@ -36,7 +36,13 @@
 <tr d-ix="7"><td>017</td><td>Charcoal</td><td>240625T000710Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273784#273784">Neil</a></td></tr>
 <tr d-ix="8"><td>078</td><td>J</td><td>240625T032739Z</td><td><a href="https://codegolf.stackexchange.com/questions/273783/binary-slashes-display/273790#273790">Conor O&</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>120</s> 118 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>82</s> <s>81</s> <s>76</s> 75 bytes</h1>
+<pre><code>{49='/\ \  \ \/ \ \ '10/=}%5/zip.3&lt;{' ':a+}%\3&gt;{a\+}%+zip.,.a*:b@*b\+\6+/n*
+</code></pre>
+<p><a href="https://tio.run/##S8/PSStOLsosKPn/v9rE0lZdP0YhRgGIYvRBhIK6oYG@ba2qqX5VZoGesU21uoK6VaJ2rWqMsV11YgyQoQ2S0NFL1LJKctBKitGOMdPWz9P6/9/Q0AAIAQ" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p>LSB at the bottom left.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>120</s> 118 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>def f(i):
  c=a,=[&quot;\n&quot;]
@@ -45,12 +51,6 @@
 </code></pre>
 <p><a href="https://tio.run/##FcpNCsMgEEDhvacYBgr@pFgSCiUyJ1EXYiMRShJCoHaTq9u4@@C97XfM6zK8tr3W95Qg8SxGBpFCRxbdgp7Bd86fCfIY7cMrQnAOFS8jnfnWC4kaTSQbVGlUeNWuSB6a2iq8iiYoup/XAGiy1tQz2Pa8HFxGURN/DqL@AQ" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Output with a leading newline, some trailing whitespaces at the end of each line and with the least significant bit in the bottom left (LSB)</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="http://www.golfscript.com/golfscript/" rel="nofollow noreferrer">GolfScript</a>, <s>82</s> <s>81</s> 76 bytes</h1>
-<pre><code>{49='/\ \  \ \/ \ \ '10/=}%5/zip.3&lt;{' ':a+}%\3&gt;{a\+}%+zip.,,-1%{a*}%\]zip n*
-</code></pre>
-<p><a href="https://tio.run/##S8/PSStOLsosKPn/v9rE0lZdP0YhRgGIYvRBhIK6oYG@ba2qqX5VZoGesU21uoK6VaJ2rWqMsV11YgyQoQ2S0NHRNVStTtQCiscC@Qp5Wv//GxoaACEA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
-<p>LSB at the bottom left.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 88 bytes</h1>
 
