--- a/q/273956.html
+++ b/q/273956.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>076</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
+<tr d-ix="0"><td>071</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 76 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>,<s> 76 </s>71 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;n=&gt;x.flatMap((c,i)=&gt;(k=i-n+1)&lt;0?[]:x.slice(k,i+1).sort((p,q)=&gt;p-q)[n&gt;&gt;1])
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;n=&gt;x.flatMap(c=&gt;++k&lt;0?[]:x.slice(k,k+n).sort((p,q)=&gt;p-q)[n&gt;&gt;1],k=-n)
 </code></pre>
-<p><a href="https://tio.run/##HYpLDsIgFACvwvK9@Ersx2iM4Ak8QcOCYGuwBGghhttj093MZL76p5PZbMyND@@pzqIWIb2Qhc9O55eOAIYsCgmLsI0/tfg4P0d1Lzw5ayZYyO6Np7BlgEjrfsZmxdFL2SqsJvgU3MRd@MAMY0/sQuxGrCM2ELse2h0wKIQesf4B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##HcfRCsIgFADQX/HxXrxKbYsi0r6gLxh7EHOxFHVTYn9vsLdzvuZnit2WXEVMb9dm1Xalo9K7nIOpL5PBKs25f5ye43TfZQmLdeDJ84iypK0CZFpR6SxWHKPW54m8EhGbTbGk4GRIH5hh7IldiN2IdcQGYtej3YFhQugR2x8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
