--- a/q/273956.html
+++ b/q/273956.html
@@ -26,9 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
+<tr d-ix="0"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
+<tr d-ix="1"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 67 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 4 bytes</h1>
+<pre><code>lv∆ṁ
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJsduKIhuG5gSIsIiIsIjNcblszLDUsOCwyLDQsNyw1LDIsNyw0XSJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<pre><code>l    # Get all overlapping slices of length k
+ v∆ṁ # Take the median of each
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 67 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;k=&gt;g=n=&gt;n&lt;k?[]:[...g(n-1),x.slice(n-k,n).sort((p,q)=&gt;p-q)[k&gt;&gt;1]]
 </code></pre>
