--- a/q/273956.html
+++ b/q/273956.html
@@ -26,13 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>013</td><td>Uiua SBCS</td><td>240706T113354Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273961#273961">chunes</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Jelly</td><td>240706T111628Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273960#273960">lyxal</a></td></tr>
-<tr d-ix="2"><td>024</td><td>Factor</td><td>240706T103142Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273959#273959">chunes</a></td></tr>
-<tr d-ix="3"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
-<tr d-ix="4"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
+<tr d-ix="0"><td>008</td><td>Japt</td><td>240706T121748Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273962#273962">Shaggy</a></td></tr>
+<tr d-ix="1"><td>013</td><td>Uiua SBCS</td><td>240706T113354Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273961#273961">chunes</a></td></tr>
+<tr d-ix="2"><td>003</td><td>Jelly</td><td>240706T111628Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273960#273960">lyxal</a></td></tr>
+<tr d-ix="3"><td>024</td><td>Factor</td><td>240706T103142Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273959#273959">chunes</a></td></tr>
+<tr d-ix="4"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
+<tr d-ix="5"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 13 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ãV ËÍgVz
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=41Ygy81nVno&amp;input=WzMgNSA4IDIgNCA3IDUgMiA3IDRdCjM" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, 13 bytes</h1>
 <pre><code>⊡⌊÷2⊸⧻⍉≡⊏⊸≡⍏◫
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__RiDihpAg4oqh4oyKw7cy4oq44qe74o2J4omh4oqP4oq44omh4o2P4perCgpGIDMgWzMgNSA4IDIgNCA3IDUgMiA3IDRdCg==" rel="nofollow noreferrer">Try it!</a></p>
@@ -43,7 +49,7 @@
 ⊡⌊÷2⊸⧻         # ‎⁤get the middle row
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>ṡÆṁ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///hzoWH2x7ubPz//3@0sY6pjoWOkY6JjjmQZQQkTWL/GwMA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -57,12 +63,12 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 24 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 24 bytes</h1>
 <pre><code>[ clump [ median ] map ]
 </code></pre>
 <p><a href="https://tio.run/##DcwxDsIwEAXRPqf4J0iRBBHBARANDaKKUqzMEixsx1mvC4RyduNm9Kp5kdFVyuN@vV1OWGTN0YYFibfMwXCCJ323SUltUmsSorDqN4oNig9LYIdz0/zQ44ARHQYcq7raATv6MsG47CMmeH5aCpjrMmIuhpxDW/4" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 67 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 67 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;k=&gt;g=n=&gt;n&lt;k?[]:[...g(n-1),x.slice(n-k,n).sort((p,q)=&gt;p-q)[k&gt;&gt;1]]
 </code></pre>
@@ -75,7 +81,7 @@
 <p><a href="https://tio.run/##HcfRCsIgFADQX/HxXrxKbYsi0r6gLxh7EHOxFHVTYn9vsLdzvuZnit2WXEVMb9dm1Xalo9K7nIOpL5PBKs25f5ye43TfZQmLdeDJ84iypK0CZFpR6SxWHKPW54m8EhGbTbGk4GRIH5hh7IldiN2IdcQGYtej3YFhQugR2x8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><a href="https://tio.run/##HcdLCsIwEADQq2Q5A9NgP6JIE/EQrkIWpaalJkwkKVpPH6W7957De8hjWl5rxfHhyqTKprRXelasNPf@auzFSCln4KpG2mQOy@j@8cQoc0wroPFa19aWMXKOwckQZ5iA3UfcF17b5pbS8AXTkjiSOJNoSHQkTnubHZ1FhBahPiCWHw" rel="nofollow noreferrer">Both functions can reduce 10 bytes if input as <code>Uint32Array</code></a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 4 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 4 bytes</h1>
 <pre><code>lv∆ṁ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJsduKIhuG5gSIsIiIsIjNcblszLDUsOCwyLDQsNyw1LDIsNyw0XSJd" rel="nofollow noreferrer">Try it Online!</a></p>
