--- a/q/273956.html
+++ b/q/273956.html
@@ -37,13 +37,14 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ãV ËÍgVz
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=41Ygy81nVno&amp;input=WzMgNSA4IDIgNCA3IDUgMiA3IDRdCjM" rel="nofollow noreferrer">Try it</a>
-ãV ËÍgVz     :Implicit input of array U &amp; integer V
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=41Ygy81nVno&amp;input=WzMgNSA4IDIgNCA3IDUgMiA3IDRdCjM" rel="nofollow noreferrer">Try it</a></p>
+<pre><code>ãV ËÍgVz     :Implicit input of array U &amp; integer V
 ãV           :Sub-arrays of U of length V
-Ë         :Map
-Í        :  Sort
-g       :  Get element at 0-based index
-Vz     :    V floor divided by 2</p>
+   Ë         :Map
+    Í        :  Sort
+     g       :  Get element at 0-based index
+      Vz     :    V floor divided by 2
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>APL+WIN, 30 bytes</h1>
 <p>Prompts for vector of numbers followed by k</p>
