--- a/q/273956.html
+++ b/q/273956.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>004</td><td>Jelly</td><td>240706T142512Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273965#273965">Jonathan</a></td></tr>
+<tr d-ix="0"><td>003</td><td>Jelly</td><td>240706T142512Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273965#273965">Jonathan</a></td></tr>
 <tr d-ix="1"><td>008</td><td>Japt</td><td>240706T121748Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273962#273962">Shaggy</a></td></tr>
 <tr d-ix="2"><td>030</td><td>APL+WIN</td><td>240706T125528Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273964#273964">Graham</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Uiua SBCS</td><td>240706T113354Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273961#273961">chunes</a></td></tr>
@@ -35,15 +35,15 @@
 <tr d-ix="6"><td>067</td><td>JavaScript Node.js</td><td>240706T095318Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273957#273957">l4m2</a></td></tr>
 <tr d-ix="7"><td>004</td><td>Vyxal</td><td>240706T100546Z</td><td><a href="https://codegolf.stackexchange.com/questions/273956/rolling-median-of-all-k-length-ranges/273958#273958">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 4 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>Æṁ⁹Ƥ
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 4 </s> 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>ṡÆṁ
 </code></pre>
 <p>A dyadic Link that accepts the list of orderable numbers on the left and the infix length on the right and yields a list of numbers.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8//9w28OdjY8adx5b8v///2hjHQVTHQULHQUjHQUTHQVzMNcIzDCJ/W8MAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##y0rNyan8///hzoWH2x7ubPz//3@0sY6CqY6ChY6CkY6CiY6COZhrBGaYxP43BgAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h4>How?</h4>
-<pre><code>Æṁ⁹Ƥ - Link: list of numbers L, positive integer N
-  ⁹Ƥ - for infixes if length N:
-Æṁ   -   median
+<pre><code>ṡÆṁ - Link: list of numbers L, positive integer N
+ṡ   - overlapping slices of {L} of length {N}:
+ Æṁ - median (vectorises)
 </code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 8 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
