--- a/q/273956.html
+++ b/q/273956.html
@@ -41,6 +41,14 @@
 <pre class="lang-matlab prettyprint-override"><code>@(x,n)median(im2col(x,[1 n]),1)
 </code></pre>
 <p><a href="https://tio.run/##y08uSSxL/Z9mq6en999Bo0InTzM3NSUzMU8jM9coOT8HKBJtqJAXq6ljqPk/JbO4QCNNI9pYwVTBQsFIwUTBHMgyApImsToKxpqa/wE" rel="nofollow noreferrer" title="Octave – Try It Online">Try it online!</a></p>
+<h3>How it works</h3>
+<p><code>@(x,n)</code> defines an anonymous function inputs <code>x</code> (row vector) and <code>n</code> (scalar).</p>
+<p><code>im2col(x,[1 n])</code> produces sliding blocks from <code>x</code> of length <code>n</code>, arranged as columns of a matrix. For inputs <code>x = [3 5 8 2 4 7 5 2 7 4]</code>, <code>n = 3</code> this gives</p>
+<pre class="lang-matlab prettyprint-override"><code>3   5   8   2   4   7   5   2
+5   8   2   4   7   5   2   7
+8   2   4   7   5   2   7   4
+</code></pre>
+<p><code>median(...,1)</code> computes the median along the first dimension, that is, vertically.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 4 </s> 3 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ṡÆṁ
