--- a/q/235964.html
+++ b/q/235964.html
@@ -26,15 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>005</td><td>Japt</td><td>211004T133302Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235995#235995">Shaggy</a></td></tr>
-<tr d-ix="1"><td>nan</td><td></td><td>240706T022007Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/273954#273954">RARE Kpo</a></td></tr>
-<tr d-ix="2"><td>040</td><td>Rust</td><td>231014T202539Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/266000#266000">leo848</a></td></tr>
-<tr d-ix="3"><td>861</td><td>BLC</td><td>231014T160530Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/265998#265998">Legendar</a></td></tr>
-<tr d-ix="4"><td>007</td><td>Uiua</td><td>231014T053231Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/265992#265992">chunes</a></td></tr>
-<tr d-ix="5"><td>004</td><td>Thunno 2</td><td>230414T193307Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/260091#260091">The Thon</a></td></tr>
-<tr d-ix="6"><td>038</td><td>Lua</td><td>230415T194936Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/260117#260117">bluswimm</a></td></tr>
-<tr d-ix="7"><td>035</td><td>SageMath</td><td>230415T040232Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/260103#260103">138 Aspe</a></td></tr>
-<tr d-ix="8"><td>022</td><td>Arturo</td><td>221112T142519Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254508#254508">chunes</a></td></tr>
+<tr d-ix="0"><td>019</td><td>Arturo</td><td>221112T142519Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254508#254508">chunes</a></td></tr>
+<tr d-ix="1"><td>005</td><td>Japt</td><td>211004T133302Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235995#235995">Shaggy</a></td></tr>
+<tr d-ix="2"><td>nan</td><td></td><td>240706T022007Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/273954#273954">RARE Kpo</a></td></tr>
+<tr d-ix="3"><td>040</td><td>Rust</td><td>231014T202539Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/266000#266000">leo848</a></td></tr>
+<tr d-ix="4"><td>861</td><td>BLC</td><td>231014T160530Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/265998#265998">Legendar</a></td></tr>
+<tr d-ix="5"><td>007</td><td>Uiua</td><td>231014T053231Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/265992#265992">chunes</a></td></tr>
+<tr d-ix="6"><td>004</td><td>Thunno 2</td><td>230414T193307Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/260091#260091">The Thon</a></td></tr>
+<tr d-ix="7"><td>038</td><td>Lua</td><td>230415T194936Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/260117#260117">bluswimm</a></td></tr>
+<tr d-ix="8"><td>035</td><td>SageMath</td><td>230415T040232Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/260103#260103">138 Aspe</a></td></tr>
 <tr d-ix="9"><td>059</td><td>Kotlin</td><td>211004T182027Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/236007#236007">Seggan</a></td></tr>
 <tr d-ix="10"><td>003</td><td>Pyt</td><td>230109T002310Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/256499#256499">Kip the </a></td></tr>
 <tr d-ix="11"><td>042</td><td>><></td><td>221114T093557Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254553#254553">Emigna</a></td></tr>
@@ -105,12 +105,17 @@
 <tr d-ix="76"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="77"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>6</s> 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <s>29</s> <s>22</s> 19 bytes</h1>
+<pre class="lang-arturo prettyprint-override"><code>$=&gt;[∏map&amp;'x-&gt;x^x]
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?YL0ciU" rel="nofollow noreferrer">Try it</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>6</s> 5 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ô*² ×
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=9CqyINc&amp;input=NQ" rel="nofollow noreferrer">Try it here</a></p>
 </div>
-<div id="pu1" class="pu"><h2><code>awk</code></h2>
+<div id="pu2" class="pu"><h2><code>awk</code></h2>
 <p>a hyperfactorial function in <code>POSIX</code>-compliant <code>awk</code> syntax that bypasses any and all usage of the exponentiation operator, without sacrificing efficiency :</p>
 <pre><code>jot 20 | gawk -Mbe '
 
@@ -150,13 +155,13 @@ function _____(__, _, ___, ____) {
 </code></pre>
 <p><code>awk</code>'s syntax looks really modern for a 50-year old language</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 40 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 40 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>|n|(1u32..=n).map(|n|n.pow(n)).product()
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=jY5NCsIwEIX3c4qxq4nU1B8QsRRce4uiBgrtNMQEW9KcxE0Xeqjexkg9gKsH7-fjPV_G3e04nRRjU1ZMwtc3iwoLyJYw8EAbt9tKWbCQTakpOix1-yAWQmrTXt3FkoBl9nZWrQ4T_Tv59c85AKjWYIcV41rKPXr4PuiPGClYoKJO5ICoTcW25gUlinwQMfEhSbFLsY95gDATx3HWDw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Staightforward functional approach. Follows the rules for type inference. As the program takes and returns a u32, only calls up to H(5) are supported. This is because {integer}::pow takes a u32, and casting would cost five bytes.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://tromp.github.io/cl/Binary_lambda_calculus.html" rel="nofollow noreferrer">BLC</a>, 8 bytes (61 bit)</h1>
+<div id="pu4" class="pu"><h1><a href="https://tromp.github.io/cl/Binary_lambda_calculus.html" rel="nofollow noreferrer">BLC</a>, 8 bytes (61 bit)</h1>
 <pre><code>0000010101110000001011010011100000010111101100111010001100010
 </code></pre>
 <p>Works for Church encoded numerals with <code>1=i</code>. The code is derived from the common <code>fac</code> function. Degolfed to <a href="https://bruijn.marvinborner.de" rel="nofollow noreferrer">bruijn</a>:</p>
@@ -167,7 +172,7 @@ hyperfac [[1 [[exp (1 [[2 1 (1 0)]])]] [1] [0]]]
     exp (0 0)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 7 <a href="https://www.uiua.org/pad?src=U0JDUyDihpAgK0BcMOKKlwpEZWNvZGUg4oaQIOKHjOKKjy0x4pa9wrEu4o2Y4ouv4oav4oqCwq8x4qe74ouv4qe7LOKHjOKItSjihpjCrzHii68rMjU2KSAtQFwwKzEKJnAg4oqCIjggYml0IGVuY29kaW5nOlx0IiBTQkNTICLih4ziio8tMeKWvcKxLuKNmOKLr-KGr-KKgsKvMeKnu-KLr-Knuyzih4ziiLUo4oaYwq8x4ouvKzI1NikiIOKKgitAXDDih6ExMjkiLiziiLY74oiYwqzCscKv4oy14oia4peL4oyK4oyI4oGFPeKJoDziiaQ-4omlKy3Dl8O34pe_4oG_4oKZ4oan4oal4oig4qe74paz4oeh4oqi4oeM4pmt4ouv4o2J4o2P4o2W4oqa4oqb4oqd4pah4oqU4omF4oqf4oqC4oqP4oqh4oav4oaZ4oaY4oa74per4pa94oyV4oiK4oqXL-KIp1xc4oi14omh4oi64oqe4oqg4o2l4oqV4oqc4oip4oqT4oqD4oqZ4ouF4o2Y4o2c4o2a4qyaJz_ijaPijaQh4o6L4oas4pqCzrfPgM-E4oiefl9bXXt9KCnCr0AkXCLihpB8IyIKJnAg4oqCImRlY29kZWQ6XHQiIERlY29kZSAiwqPCsS0xwrjChy7DjMKlwrPCsMKIMcKfwqXCnyzCo8K_KMK1wogxwqUrMjU2KSIg4oqCK0BcMOKHoTEyOSIuLOKItjviiJjCrMKxwq_ijLXiiJril4vijIrijIjigYU94omgPOKJpD7iiaUrLcOXw7fil7_igb_igpnihqfihqXiiKDip7vilrPih6HiiqLih4zima3ii6_ijYnijY_ijZbiipriipviip3ilqHiipTiiYXiip_iioLiio_iiqHihq_ihpnihpjihrvil6vilr3ijJXiiIriipcv4oinXFziiLXiiaHiiLriip7iiqDijaXiipXiipziiKniipPiioPiipnii4XijZjijZzijZrirJonP-KNo-KNpCHijovihqzimoLOt8-Az4TiiJ5-X1tde30oKcKvQCRcIuKGkHwjIg==" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu5" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 7 <a href="https://www.uiua.org/pad?src=U0JDUyDihpAgK0BcMOKKlwpEZWNvZGUg4oaQIOKHjOKKjy0x4pa9wrEu4o2Y4ouv4oav4oqCwq8x4qe74ouv4qe7LOKHjOKItSjihpjCrzHii68rMjU2KSAtQFwwKzEKJnAg4oqCIjggYml0IGVuY29kaW5nOlx0IiBTQkNTICLih4ziio8tMeKWvcKxLuKNmOKLr-KGr-KKgsKvMeKnu-KLr-Knuyzih4ziiLUo4oaYwq8x4ouvKzI1NikiIOKKgitAXDDih6ExMjkiLiziiLY74oiYwqzCscKv4oy14oia4peL4oyK4oyI4oGFPeKJoDziiaQ-4omlKy3Dl8O34pe_4oG_4oKZ4oan4oal4oig4qe74paz4oeh4oqi4oeM4pmt4ouv4o2J4o2P4o2W4oqa4oqb4oqd4pah4oqU4omF4oqf4oqC4oqP4oqh4oav4oaZ4oaY4oa74per4pa94oyV4oiK4oqXL-KIp1xc4oi14omh4oi64oqe4oqg4o2l4oqV4oqc4oip4oqT4oqD4oqZ4ouF4o2Y4o2c4o2a4qyaJz_ijaPijaQh4o6L4oas4pqCzrfPgM-E4oiefl9bXXt9KCnCr0AkXCLihpB8IyIKJnAg4oqCImRlY29kZWQ6XHQiIERlY29kZSAiwqPCsS0xwrjChy7DjMKlwrPCsMKIMcKfwqXCnyzCo8K_KMK1wogxwqUrMjU2KSIg4oqCK0BcMOKHoTEyOSIuLOKItjviiJjCrMKxwq_ijLXiiJril4vijIrijIjigYU94omgPOKJpD7iiaUrLcOXw7fil7_igb_igpnihqfihqXiiKDip7vilrPih6HiiqLih4zima3ii6_ijYnijY_ijZbiipriipviip3ilqHiipTiiYXiip_iioLiio_iiqHihq_ihpnihpjihrvil6vilr3ijJXiiIriipcv4oinXFziiLXiiaHiiLriip7iiqDijaXiipXiipziiKniipPiioPiipnii4XijZjijZzijZrirJonP-KNo-KNpCHijovihqzimoLOt8-Az4TiiJ5-X1tde30oKcKvQCRcIuKGkHwjIg==" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>/×ⁿ.+1⇡
 </code></pre>
 <p><a href="https://uiua.org/pad?src=SCDihpAgL8OX4oG_Lisx4oehCgpIIDAKSCAxCkggMgpIIDMKSCA0CkggNQ==" rel="nofollow noreferrer">Try it!</a></p>
@@ -178,7 +183,7 @@ hyperfac [[1 [[exp (1 [[2 1 (1 0)]])]] [1] [0]]]
 /×       # product
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 4 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer" title="Thunno 2 Codepage">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/Thunno/Thunno2" rel="nofollow noreferrer">Thunno 2</a>, 4 <a href="https://github.com/Thunno/Thunno2/blob/main/docs/codepage.md" rel="nofollow noreferrer" title="Thunno 2 Codepage">bytes</a></h1>
 <pre><code>RD*p
 </code></pre>
 <h4>Explanation</h4>
@@ -190,22 +195,17 @@ R     # Push the one-range        [1, 2, 3, 4, 5, 6]
       # Implicit output
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 38 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.lua.org/" rel="nofollow noreferrer">Lua</a>, 38 bytes</h1>
 
 <pre class="lang-lua prettyprint-override"><code>a=1 for i=1,...do a=a*i^i end print(a)
 </code></pre>
 <p><a href="https://tio.run/##yylN/P8/0dZQIS2/SCHT1lBHT08vJV8h0TZRKzMuUyE1L0WhoCgzr0QjUfP///8mAA" rel="nofollow noreferrer" title="Lua – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.sagemath.org/" rel="nofollow noreferrer">SageMath</a>, 35 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.sagemath.org/" rel="nofollow noreferrer">SageMath</a>, 35 bytes</h1>
 <p><strong>Without using NATIVE python module or syntax</strong></p>
 <p>Golfed vesrion. <a href="https://sagecell.sagemath.org/?z=eJxLs81JzE1KSVTIsyooyk_RyIzLVEjLL1LIVMjMizbU08uL1eTlAgnkAQUUog309AwNYq14uRSAoKAoM69EI09HQUnXTklHIU0jT1MTAORDFm4=&amp;lang=sage&amp;interacts=eJyLjgUAARUAuQ==" rel="nofollow noreferrer">Run it on SageMathCell!</a></p>
 <pre><code>f=lambda n:prod(i^i for i in[1..n])
 </code></pre>
-</div>
-<div id="pu8" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <s>29</s> 22 bytes</h1>
-<pre class="lang-arturo prettyprint-override"><code>$=&gt;[∏map..1&amp;'x-&gt;x^x]
-</code></pre>
-<p><a href="http://arturo-lang.io/playground?Odvc4a" rel="nofollow noreferrer">Try it</a></p>
 </div>
 <div id="pu9" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a>, 59 bytes</h1>
 <pre><code>fun h(i:Double):Double=if(i&lt;1)1.0 else Math.pow(i,i)*h(i-1)
