--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240707T042513Z
+"   /golfscore                                      20240707T085242Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/226877.html">Split a list at the second occurrence of the fir: 0226877</a>
 <a href="q/106567.html">Every word from babab to zyzyz                  : 0106567</a>
 <a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
 <a href="q/273956.html">Rolling median of all K-length ranges           : 0273956</a>
