--- a/q/106567.html
+++ b/q/106567.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>095</td><td>R</td><td>240706T210817Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/273972#273972">int 21h </a></td></tr>
+<tr d-ix="0"><td>091</td><td>R</td><td>240706T210817Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/273972#273972">int 21h </a></td></tr>
 <tr d-ix="1"><td>082</td><td>Regenerate a</td><td>240122T171739Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/269480#269480">DLosc</a></td></tr>
 <tr d-ix="2"><td>040</td><td>Perl 5</td><td>240122T154801Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/269476#269476">Xcali</a></td></tr>
 <tr d-ix="3"><td>054</td><td>Zsh P</td><td>240121T192228Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/269447#269447">pxeger</a></td></tr>
@@ -79,17 +79,17 @@
 <tr d-ix="50"><td>071</td><td>Perl</td><td>170112T124224Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/106575#106575">Dada</a></td></tr>
 <tr d-ix="51"><td>021</td><td>MATL</td><td>170112T123330Z</td><td><a href="https://codegolf.stackexchange.com/questions/106567/every-word-from-babab-to-zyzyz/106572#106572">Luis Men</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 95 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>95</s> 91 bytes</h1>
 <ul>
-<li>the construction of vowels sequence has been borrowed from an unpublished <a href="https://tio.run/##K/r/P8c2J7WkJLWomKvM1sDKVMtUO1nD0ErXUMdAk6u8KLMkVaNEI7WiIDEvRS@9KDNFw9lGNydatyxWJwzEANLOOmE6zprRplaGsZo6hjqmOjpKSpr//wMA" rel="nofollow noreferrer">86 bytes solution</a> by J.Doe, available as a comment to <a href="https://codegolf.stackexchange.com/a/106748/101276">this post</a>.</li>
+<li>the construction of the vowels sequence has been borrowed from an unpublished <a href="https://tio.run/##K/r/P8c2J7WkJLWomKvM1sDKVMtUO1nD0ErXUMdAk6u8KLMkVaNEI7WiIDEvRS@9KDNFw9lGNydatyxWJwzEANLOOmE6zprRplaGsZo6hjqmOjpKSpr//wMA" rel="nofollow noreferrer">86 bytes solution</a> by J.Doe, available as a comment to <a href="https://codegolf.stackexchange.com/a/106748/101276">this post</a>.</li>
+<li>-4 bytes thanks to pajonk</li>
 </ul>
 <pre class="lang-r prettyprint-override"><code>L=letters
-v=0:5*5+c(1:-1,0)
-y=L[v];x=L[-v]
-`[`=outer;p=paste0
-t(t(sort(x[y[x[y[x,p],p],p],p])))
+y=L[v&lt;-0:5*5+c(1:-1,0)];x=L[-v]
+`*`=\(a,b)outer(a,b,paste0)
+t(t(sort(x*y*x*y*x)))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72waMGyNNsYDc3qpaUlaboWN-N9bHNSS0pSi4q5ymwNrEy1TLWTNQytdA11DDS5Km19ostirSuAlG5ZLFdCdIJtfilQrXWBbUFicUmqAVeJRolGcX5RiUZFdGU0GOsUxMKRpqYmxJrttdaJtmkamlwZqYkpGomaXCWJmTlAGiK7YAGEBgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGyNNsYDc3qpaUlaboWN6N9bHNSS0pSi4q5Km19ostsdA2sTLVMtZM1DK10DXUMNGOtK4DiumWxXAlaCUCdiTpJmvmlQA0glk5BYnFJqoEmV4lGiUZxflGJRoVWpRYYa2pqQqzYXmudaJumocmVkZqYopEIVJuYmQOkIbILFkBoAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Despite that this amazing question has already two answers in R, I am sharing my answer too. It is based on <code>outer</code> function. Here it is used recursively 4 times. Instead of multiplication, the characters are pasted together resulting in every possible combination of characters <span class="math-container">\$x+y+x+y+x\$</span> as a 5-dimensional array with dimensions <code>20 x 6 x 20 x 6 x 20</code> and 288000 elements inside. The array is sorted and flattened at the same time, then transposed two times. This converts the 5d-array to a single column matrix, as per challenge requirements.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a> <code>-a</code>, 82 bytes</h1>
