--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240707T211127Z
+"   /golfscore                                      20240707T213846Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/273990.html">Is this a Hadamard matrix?                      : 0273990</a>
 <a href="q/273956.html">Rolling median of all K-length ranges           : 0273956</a>
 <a href="q/273783.html">Binary Slashes Display                          : 0273783</a>
 <a href="q/273875.html">Segments of a string doubling in length         : 0273875</a>
